--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 
 
   <div class="container">
-    <div class="img_hover">
+    <div class="img">
     <img src="./images/image-equilibrium.jpg" class="main-img"/>
+    </div>
+    <div class="eyeover">
+      <img src="./images/icon-view.svg" alt="eye">
+
     </div>
     <h1>Equilibrium #3429</h1>
     <p class="description">Our Equilibrium collection promotes balance and calm.</p>
